<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rws</name>
  <version>1.0.0</version>
  <description>ROS WebSocket Server</description>
  <maintainer email="vasily.kiniv@gmail.com">Vasily Kiniv</maintainer>
  <license>Apache License 2.0</license>

  <depend>cyclonedds</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rcl_interfaces</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
